--- a/src/components/UploadStory.css
+++ b/src/components/UploadStory.css
@@ -30,6 +30,8 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    overflow-y: auto;      /* ← 스크롤 가능하게 만들기 */
+    max-height: 100vh;
 }
 
 /* 제목 */
@@ -59,11 +61,19 @@
     border: 2px solid #54BD95;
 }
 
-/* 텍스트 영역 */
 .textarea {
+    width: 80%;
+    padding: 10px;
+    margin-bottom: 15px;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    font-size: 16px;
     height: 120px;
-    resize: none;
-}
+    resize: vertical;
+    box-sizing: border-box;
+    min-height: 120px;
+  }
+  
 
 .textarea:focus {
     outline: none; /* 기본 파란색 테두리 제거 */
@@ -120,3 +130,12 @@
     color: white;
 }
 
+.pageBlock {
+    width: 100%;
+    max-width: 1300px;
+    margin-bottom: 40px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+  
