--- a/src/components/UploadStory.css
+++ b/src/components/UploadStory.css
@@ -138,4 +138,35 @@
     flex-direction: column;
     align-items: center;
   }
+
+.sectionTitle {
+    color: white;
+    font-size: 18px;
+    font-weight: bold;
+    margin-top: 20px;
+    margin-bottom: 5px;
+  }
+  
+.storyList {
+    list-style-type: none;
+    padding-left: 0;
+  }
+  
+.storyItem::before {
+    content: "- ";
+    color: white;
+    font-weight: bold;
+  }
+  
+.storyItem a {
+    color: white;
+    text-decoration: none; /* 기본 밑줄 제거 */
+    font-size: 14px;
+  }
+  
+.storyItem a:hover {
+    text-decoration: underline;
+    color: #ffd700; /* 노란색으로 변경 */
+    transition: color 0.2s ease;
+  }
   
