--- a/src/components/UploadStory.css
+++ b/src/components/UploadStory.css
@@ -153,7 +153,6 @@
   }
   
 .storyItem::before {
-    content: "- ";
     color: white;
     font-weight: bold;
   }
@@ -167,6 +166,6 @@
 .storyItem a:hover {
     text-decoration: underline;
     color: #ffd700; /* 노란색으로 변경 */
-    transition: color 0.2s ease;
+    transition: color;
   }
   
